Page MenuHome GnuPG

pinentry-gnome3's window has no default title
Closed, ResolvedPublic

Description

pinentry-gnome3 has no title in its windows, so I can't use KeepassX to insert
passwords into the dialog.
using "update-alternatives --config pinentry" to force pinentry-gtk2ŝolves the
problem, because that windows has a title.

Details

Version
0.9.7-3

Event Timeline

brammel set Version to 0.9.7-3.
brammel added a subscriber: brammel.
justus renamed this task from pinentry-gnome3 to pinentry-gnome3's window has no default title.Jan 16 2017, 4:34 PM
justus closed this task as Resolved.