gnome3: Use the program name as default title.

* gnome3/pinentry-gnome3.c (create_prompt): If no title is requested,
use the program name as the default title.  This mimics what the GTK+2
variant does (although the GTK+2 pinentry seems to use
basename(argv[0])).

GnuPG-bug-id: 2920
Signed-off-by: Justus Winter <justus@g10code.com>